# flow

./: .gitignore  .golangci.yaml  .goreleaser.yaml  .yamlfmt  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  codecov.yaml  dev.flow  development.flow  flow.yaml  go.mod  go.sum  main.go  shortcuts.flow
.execs/: build.flow  container.flow  desktop.flow  docs.flow  helpers.flow  release.flow  setup.flow  test.flow  tools.flow  validate.flow
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
cmd/: common.go  config.go  create.go  delete.go  exec.go  executables.go  flags.go  get.go  groups.go  init.go  library.go  list.go  login.go  logs.go  man.go  open.go  remove.go  root.go  run.go  set.go  sync.go  ui.go  vault.go  version.go  workspace.go
completions/: flow.bash  flow.fish  flow.zsh
config/: arguments.go  common.go  config.go  defaults.go  executable_definitions.go  executable_md.go  executables.go  executables_test.go  io.go  parameter.go  secret_config.go  types.go  user_config.go  workspace_config.go
desktop/: .gitignore  README.md  index.html  (+5 more)
desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: cache.rs  cli.rs  command_runner.rs  lib.rs
desktop/src-tauri/src/commands/: cache.rs  command_executor.rs  config.rs  core.rs  executable.rs  mod.rs  shell.rs  vault.rs  workspace.rs
desktop/src-tauri/src/types/: enriched.rs  executable.rs  mod.rs
(+679 files in other folders)
